2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/lang/reflect/MalformedParameterizedTypeException.java: New
	file.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/util/PriorityQueue.java (PriorityQueue): Implements
	Serializable.
	(serialVersionUID): New field.
	* java/util/EnumMap.java (serialVersionUID): New field.
	* java/util/EnumSet.java (serialVersionUID): New field.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/util/Arrays.java (hashCode): New methods.
	(deepHashCode): New method.
	(deepEquals): Likewise.
	(toString): New methods.
	(deepToString): New method.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/util/zip/Inflater.java (getTotalIn): Deprecated.
	(getBytesRead): New method
	(getTotalOut): Deprecated.
	(getBytesWritten): New method.
	(totalIn, totalOut): Now 'long'.
	* java/util/zip/DeflaterEngine.java (totalIn): Now 'long'.
	(getTotalIn): Return 'long'.
	* java/util/zip/Deflater.java (totalOut): Now 'long'.
	(getTotalOut): Deprecated.
	(getBytesWritten): New method.
	(getTotalIn): Deprecated.
	(getBytesRead): New method.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/nio/charset/Charset.java (compareTo): Changed argument
	type.
	* java/nio/ShortBuffer.java (compareTo): Changed argument type.
	* java/nio/LongBuffer.java (compareTo): Changed argument type.
	* java/nio/IntBuffer.java (compareTo): Changed argument type.
	* java/nio/FloatBuffer.java (compareTo): Changed argument type.
	* java/nio/DoubleBuffer.java (compareTo): Changed argument type.
	* java/nio/ByteBuffer.java (compareTo): Changed argument type.
	* java/nio/CharBuffer.java (CharBuffer): Implements Readable,
	Appendable.
	(append): New methods.
	(compareTo): Changed argument type.
	(read): New method.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/io/PrintStream.java (append): Don't throw IOException.
	* java/io/StringWriter.java (append): New overloads.
	* java/io/PrintWriter.java (append): New overloads.
	(PrintWriter): New constructors.