@@ -134,10 +134,16 @@ public class Thread implements Runnable
   /** The next thread number to use. */
   private static int numAnonymousThreadsCreated;
 
+  /** The default exception handler.  */
+  private static UncaughtExceptionHandler defaultHandler;
+
   /** Thread local storage. Package accessible for use by
     * InheritableThreadLocal.
     */
   WeakHashMap locals;
+
+  /** The uncaught exception handler.  */
+  UncaughtExceptionHandler exceptionHandler;
 
   /**
    * Allocates a new <code>Thread</code> object. This constructor has
@@ -330,12 +336,12 @@ public class Thread implements Runnable
     if (group == null)
       {
 	if (sm != null)
-	    group = sm.getThreadGroup();
+	  group = sm.getThreadGroup();
 	if (group == null)
-	    group = current.group;
+	  group = current.group;
       }
     else if (sm != null)
-	sm.checkAccess(group);
+      sm.checkAccess(group);
 
     this.group = group;
     // Use toString hack to detect null.
@@ -366,7 +372,7 @@ public class Thread implements Runnable
     this.vmThread = vmThread;
     this.runnable = null;
     if (name == null)
-	name = "Thread-" + ++numAnonymousThreadsCreated;
+      name = "Thread-" + ++numAnonymousThreadsCreated;
     this.name = name;
     this.priority = priority;
     this.daemon = daemon;
@@ -413,7 +419,7 @@ public class Thread implements Runnable
   {
     VMThread t = vmThread;
     if (t == null || group == null)
-	throw new IllegalThreadStateException();
+      throw new IllegalThreadStateException();
 
     return t.countStackFrames();
   }
@@ -557,7 +563,7 @@ public class Thread implements Runnable
     checkAccess();
     VMThread t = vmThread;
     if (t != null)
-	t.interrupt();
+      t.interrupt();
   }
 
   /**
@@ -648,12 +654,12 @@ public class Thread implements Runnable
    */
   public final void join(long ms, int ns) throws InterruptedException
   {
-    if(ms < 0 || ns < 0 || ns > 999999)
-	throw new IllegalArgumentException();
+    if (ms < 0 || ns < 0 || ns > 999999)
+      throw new IllegalArgumentException();
 
     VMThread t = vmThread;
-    if(t != null)
-        t.join(ms, ns);
+    if (t != null)
+      t.join(ms, ns);
   }
 
   /**
@@ -671,7 +677,7 @@ public class Thread implements Runnable
     checkAccess();
     VMThread t = vmThread;
     if (t != null)
-	t.resume();
+      t.resume();
   }
   
   /**
@@ -768,9 +774,9 @@ public class Thread implements Runnable
       throw new NullPointerException();
     VMThread t = vmThread;
     if (t != null)
-	t.setName(name);
+      t.setName(name);
     else
-	this.name = name;
+      this.name = name;
   }
 
   /**
@@ -824,7 +830,6 @@ public class Thread implements Runnable
    */
   public static void sleep(long ms, int ns) throws InterruptedException
   {
-
     // Check parameters
     if (ms < 0 || ns < 0 || ns > 999999)
       throw new IllegalArgumentException();
@@ -846,7 +851,7 @@ public class Thread implements Runnable
   public synchronized void start()
   {
     if (vmThread != null || group == null)
-	throw new IllegalThreadStateException();
+      throw new IllegalThreadStateException();
 
     VMThread.create(this, stacksize);
   }
@@ -943,7 +948,7 @@ public class Thread implements Runnable
     checkAccess();
     VMThread t = vmThread;
     if (t != null)
-	t.suspend();
+      t.suspend();
   }
 
   /**
@@ -970,9 +975,9 @@ public class Thread implements Runnable
     priority = Math.min(priority, group.getMaxPriority());
     VMThread t = vmThread;
     if (t != null)
-	t.setPriority(priority);
+      t.setPriority(priority);
     else
-	this.priority = priority;
+      this.priority = priority;
   }
 
   /**
@@ -1009,6 +1014,30 @@ public class Thread implements Runnable
         locals = thread.locals = new WeakHashMap();
       }
     return locals;
+  }
+
+  /** @since 1.5 */
+  public void setUncaughtExceptionHandler(UncaughtExceptionHandler h)
+  {
+    exceptionHandler = h;
+  }
+
+  /** @since 1.5 */
+  public UncaughtExceptionHandler getUncaughtExceptionHandler()
+  {
+    return exceptionHandler;
+  }
+
+  /** @since 1.5 */
+  public static void setDefaultUncaughtExceptionHandler(UncaughtExceptionHandler h)
+  {
+    defaultHandler = h;
+  }
+
+  /** @since 1.5 */
+  public static UncaughtExceptionHandler getDefaultUncaughtExceptionHandler()
+  {
+    return defaultHandler;
   }
 
   /**
@@ -1055,7 +1084,7 @@ public class Thread implements Runnable
    * @see
    * Thread#setDefaultUncaughtExceptionHandler(java.lang.Thread.UncaughtExceptionHandler)
    */
-  public static interface UncaughtExceptionHandler
+  public interface UncaughtExceptionHandler
   {
     /**
      * Invoked by the virtual machine with the dying thread
@@ -1069,6 +1098,7 @@ public class Thread implements Runnable
     void uncaughtException(Thread thr, Throwable exc);
   }
 
+  /** @since 1.5 */
   public enum State
   {
     BLOCKED, NEW, RUNNABLE, TERMINATED, TIMED_WAITING, WAITING;
@@ -1078,5 +1108,4 @@ public class Thread implements Runnable
      */
     private static final long serialVersionUID = 605505746047245783L;
   }
-
 }
